--- a/hw5styling.css
+++ b/hw5styling.css
@@ -29,3 +29,21 @@ h1 {
 .point:hover {
     fill: yellow;
 }
+
+.tooltip {
+    position: absolute;
+    background-color: grey;
+    border:  solid;
+    border-width: 2px;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.bar {
+    fill: cyan;
+}
+
+.bar:hover {
+    fill: gold;
+}
+  
