--- a/hw5styling.css
+++ b/hw5styling.css
@@ -8,6 +8,11 @@ h1 {
     font-size: 30px;
 }
 
+h2 {
+    text-align: center;
+    font-size: 20px;
+}
+
 /* Set additional styling options for the columns */
 .column {
     float: left;
@@ -46,4 +51,9 @@ h1 {
 .bar:hover {
     fill: gold;
 }
-  
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
